--- a/Pre-processing-data.ipynb
+++ b/Pre-processing-data.ipynb
@@ -12887,7 +12887,7 @@
     "                title=f'{i}')\n",
     "    fig.update_xaxes(title='Station ID')\n",
     "    fig.update_yaxes(title=f'{i} mean')\n",
-    "    fig.show()\n"
+    "    fig.show()"
    ]
   },
   {
